Add autonomy activities

--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -9,7 +9,7 @@
             {% endif %}
         {% endif %}
     {% endif %}
-    <div class="activity p-1 mt-1 border border-{{ color }}">
+    <div class="activity p-1 mt-1 border rounded shadow-sm border-{{ color }}">
         <div class="row">
             <div class="col">
                 <div class="row">
