--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -59,51 +59,86 @@
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col m-1 border-bottom">
+                                                <div class="col">
                                                     <div class="row">
-                                                        <div class="col">
+                                                        <div class="col m-1 border-bottom">
                                                             <small>
                                                                 Avec l'ensemble des étudiants
                                                             </small>
                                                         </div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col">
-
+                                                        <div class="col p-1">
+                                                            {{ form_widget(section.classTogetherActivities) }}
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col m-1 border-bottom">
+                                                <div class="col">
                                                     <div class="row">
-                                                        <div class="col">
+                                                        <div class="col m-1 border-bottom">
                                                             <small>
                                                                 Avec des petits groupes
                                                             </small>
                                                         </div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col">
-
+                                                        <div class="col p-1">
+                                                            {{ form_widget(section.classGroupsActivities) }}
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="row">
-                                        <div class="col ">
-                                            <img src="{{ asset('images/activity_in_autonomy_64.png') }}">
-                                            <span class="font-weight-bold">Activité(s) à faire en autonomie</span>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col p-1">
-                                            {{ form_widget(section.distantActivities) }}
+                                        <div class="col">
+                                            <div class="row">
+                                                <div class="col">
+                                                    <img src="{{ asset('images/activity_in_autonomy_64.png') }}">
+                                                    <span class="font-weight-bold">Activité(s) à faire en autonomie</span>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col p-1">
+                                                    {{ form_widget(section.autonomyActivities) }}
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col">
+                                                    <div class="row">
+                                                        <div class="col m-1 border-bottom">
+                                                            <small>
+                                                                Travail individuel
+                                                            </small>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col p-1">
+                                                            {{ form_widget(section.autonomyIndividualActivities) }}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="row">
+                                                        <div class="col m-1 border-bottom">
+                                                            <small>
+                                                                Travail collectif
+                                                            </small>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col p-1">
+                                                            {{ form_widget(section.autonomyCollectiveActivities) }}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col m-2 border">
-                                    <div class="row">
+                                    <div class="row h-100">
                                         <div class="col p-1">
                                             {{ form_widget(section.activities) }}
                                         </div>
