--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -272,6 +272,7 @@
             </div>
         </div>
 
+        
 
         <div id="Contenu_activites" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
@@ -292,7 +293,7 @@
                         {% if activity.activity.type == "activity" %}
                             <div class="row mx-1 p-3 d-flex flex-row justify-content-between align-items-center text-light {{ loop.index0 is odd ? 'bg-dark' : 'bg-secondary' }}">
                             <span>{{activity.activity.label}} </span>
-                            {% if activity.activity.mode == 'distant' %}
+                            {% if activity.activity.mode == 'autonomy' %}
                                 <div class="d-flex flex-row align-items-center">
                                 <span class="font-weight-bold mx-3"> En autonomie</span>
                                 <i class="fas mr-5 fa-2x fa-book-reader"></i>
@@ -308,13 +309,25 @@
                             <div class="row mx-1 p-3 d-flex flex-row justify-content-between align-items-center text-light bg-info }}">
                                 <div class="d-flex flex-column">
                                     <span> {{activity.activity.label}} </span>
-                                    {% if activity.acitivity.evaluation == "teacher" %}
-                                        <span class="font-weight-bold font-italic">Evalué par l'enseignant</span>
-                                    {% elseif activity.acitivity.evaluation == "student" %}
-                                        <span class="font-weight-bold font-italic">Evalué par les pairs</span>
+                                    {% if activity.evaluation_teacher == true %}
+                                        {% if activity.evaluation_peer == true %}
+                                            <span class="font-weight-bold font-italic">Evalué par l'enseignant et les pairs</span>
+                                        {% else %}
+                                            <span class="font-weight-bold font-italic">Evalué par l'enseignant</span>
+                                        {% endif %}
+                                    {% elseif activity.evaluation_peer == true %}
+                                        <span class="font-weight-bold font-italic">Evalué par les pairs</span>    
                                     {% endif %}
                                 </div>
+                                <div class = "d-flex flex-row align-items-center">
+                                {% if activity.activity.mode == 'cc' %}
+                                <span class="font-weight-bold mx-3">{{activity.evaluation_rate}}% du Contrôle Continu</span>
                                 <i class="fas fa-file-signature"></i>
+                                {% elseif activity.activity.mode == 'ct' %}
+                                <span>Sur le campus</span>
+                                <i class="fas fa-map-marker-alt"></i>
+                                {% endif %}
+                                </div>
                             </div>
                         {% endif %}
                     {% endfor %}
@@ -356,11 +369,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-primary">
+                            <tr class="table-info">
                             <td>Contrôle Continu ({{course.mccCcNbEvalSession1}} minimum)</td>
                             <td> {{course.mccCcCoeffSession1}}%</td>
                             </tr>
-                            <tr class="table-info">
+                            <tr class="table-primary">
                             <td>Contrôle Terminal - {{course.mccCtDurationSession1}} </td>
                             <td>{{course.mccCtCoeffSession1}}%</td>
                             </tr>
@@ -395,7 +408,11 @@
                 <div>
                 {% for section in course.courseSections %}
                     {% for activity in section.courseSectionActivities if activity.activity.type == "evaluation"%}
+                        {% if activity.activity.mode == 'cc' %}
                         <div class="row rounded bg-info" >{{activity.activity.label}}</div>
+                        {% elseif activity.activity.mode == 'c' %}
+                        <div class="row rounded bg-primary" >{{activity.activity.label}}</div>
+                        {% endif %}
                     {% endfor %}
                 {% endfor %}
                 </div>
