--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -309,19 +309,19 @@
                             <div class="row mx-1 p-3 d-flex flex-row justify-content-between align-items-center text-light bg-info }}">
                                 <div class="d-flex flex-column">
                                     <span> {{activity.activity.label}} </span>
-                                    {% if activity.evaluation_teacher == true %}
-                                        {% if activity.evaluation_peer == true %}
+                                    {% if activity.evaluationTeacher == true %}
+                                        {% if activity.evaluationPeer == true %}
                                             <span class="font-weight-bold font-italic">Evalué par l'enseignant et les pairs</span>
                                         {% else %}
                                             <span class="font-weight-bold font-italic">Evalué par l'enseignant</span>
                                         {% endif %}
-                                    {% elseif activity.evaluation_peer == true %}
+                                    {% elseif activity.evaluationPeer == true %}
                                         <span class="font-weight-bold font-italic">Evalué par les pairs</span>    
                                     {% endif %}
                                 </div>
                                 <div class = "d-flex flex-row align-items-center">
                                 {% if activity.activity.mode == 'cc' %}
-                                <span class="font-weight-bold mx-3">{{activity.evaluation_rate}}% du Contrôle Continu</span>
+                                <span class="font-weight-bold mx-3">{{activity.evaluationRate}}% du Contrôle Continu</span>
                                 <i class="fas fa-file-signature"></i>
                                 {% elseif activity.activity.mode == 'ct' %}
                                 <span>Sur le campus</span>
