--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -37,53 +37,105 @@
                     </div>
                     <hr>
                     <div class="row mt-3">
-                        <div class="col">
+                        <div class="col container-activities">
                             <div class="row">
                                 <div class="col">
                                     <strong>Activité(s) / Evaluation(s) associée(s) au contenu</strong>
                                 </div>
                             </div>
-                            <div class="row container-activities">
-                                <div class="col m-2 border">
-                                    <div class="row">
+
+                            <div class="row">
+                                <div class="col m-2">
+
+                                    <!-- ACTIVITIES -->
+                                    <div class="row border">
                                         <div class="col">
                                             <div class="row">
                                                 <div class="col">
-                                                    <img src="{{ asset('images/activity_in_class_64.png') }}">
-                                                    <span class="font-weight-bold">Activité(s) réalisée(s) en classe</span>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col p-1">
-                                                    {{ form_widget(section.classActivities) }}
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            <img src="{{ asset('images/activity_in_class_64.png') }}">
+                                                            <span class="font-weight-bold">Activité(s) réalisée(s) en classe</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col p-1">
+                                                            {{ form_widget(section.classActivities) }}
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            <div class="row">
+                                                                <div class="col m-1 border-bottom">
+                                                                    <small>
+                                                                        Avec l'ensemble des étudiants
+                                                                    </small>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col p-1">
+                                                                    {{ form_widget(section.classTogetherActivities) }}
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col">
+                                                            <div class="row">
+                                                                <div class="col m-1 border-bottom">
+                                                                    <small>
+                                                                        Avec des petits groupes
+                                                                    </small>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col p-1">
+                                                                    {{ form_widget(section.classGroupsActivities) }}
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="row">
                                                 <div class="col">
                                                     <div class="row">
-                                                        <div class="col m-1 border-bottom">
-                                                            <small>
-                                                                Avec l'ensemble des étudiants
-                                                            </small>
+                                                        <div class="col">
+                                                            <img src="{{ asset('images/activity_in_autonomy_64.png') }}">
+                                                            <span class="font-weight-bold">Activité(s) à faire en autonomie</span>
                                                         </div>
                                                     </div>
                                                     <div class="row">
                                                         <div class="col p-1">
-                                                            {{ form_widget(section.classTogetherActivities) }}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col">
-                                                    <div class="row">
-                                                        <div class="col m-1 border-bottom">
-                                                            <small>
-                                                                Avec des petits groupes
-                                                            </small>
+                                                            {{ form_widget(section.autonomyActivities) }}
                                                         </div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col p-1">
-                                                            {{ form_widget(section.classGroupsActivities) }}
+                                                        <div class="col">
+                                                            <div class="row">
+                                                                <div class="col m-1 border-bottom">
+                                                                    <small>
+                                                                        Travail individuel
+                                                                    </small>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col p-1">
+                                                                    {{ form_widget(section.autonomyIndividualActivities) }}
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col">
+                                                            <div class="row">
+                                                                <div class="col m-1 border-bottom">
+                                                                    <small>
+                                                                        Travail collectif
+                                                                    </small>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col p-1">
+                                                                    {{ form_widget(section.autonomyCollectiveActivities) }}
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -91,52 +143,26 @@
                                         </div>
                                     </div>
 
-                                    <div class="row">
+
+
+                                    <!-- EVALUATIONS -->
+                                    <div class="row border mt-2">
                                         <div class="col">
                                             <div class="row">
                                                 <div class="col">
-                                                    <img src="{{ asset('images/activity_in_autonomy_64.png') }}">
-                                                    <span class="font-weight-bold">Activité(s) à faire en autonomie</span>
+                                                    <img src="{{ asset('images/evaluation_cc_64.png') }}">
+                                                    <span class="font-weight-bold">Contrôle Continu</span>
                                                 </div>
                                             </div>
                                             <div class="row">
                                                 <div class="col p-1">
-                                                    {{ form_widget(section.autonomyActivities) }}
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col">
-                                                    <div class="row">
-                                                        <div class="col m-1 border-bottom">
-                                                            <small>
-                                                                Travail individuel
-                                                            </small>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col p-1">
-                                                            {{ form_widget(section.autonomyIndividualActivities) }}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col">
-                                                    <div class="row">
-                                                        <div class="col m-1 border-bottom">
-                                                            <small>
-                                                                Travail collectif
-                                                            </small>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col p-1">
-                                                            {{ form_widget(section.autonomyCollectiveActivities) }}
-                                                        </div>
-                                                    </div>
+                                                    {{ form_widget(section.ccEvaluations) }}
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="col m-2 border">
                                     <div class="row h-100">
                                         <div class="col p-1">
@@ -145,6 +171,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                     {{ form_row(section) }}
