--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -69,9 +69,7 @@ form {
     }
 }
 
-input[type=text],
-textarea,
-select {
+input[type=text] {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -82,30 +80,33 @@ select {
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
     outline: none;
+
+    & + label[placeholder] {
+        display: block;
+        pointer-events: none;
+        line-height: 46px;
+        margin-top: -46px;
+
+        &:before {
+            content: attr(placeholder);
+            display: inline-block;
+            padding: 0;
+            color: #999999;
+            white-space: nowrap;
+            -webkit-transition: 0.3s ease-in-out;
+            transition: 0.3s ease-in-out;
+            -webkit-transform: translate(8px, -12px);
+            -ms-transform: translate(8px, -12px);
+            transform: translate(8px, -12px);
+            text-transform: uppercase;
+            font-size: 9px;
+            margin: 0 0 0 -2px;
+        }
+
+    }
+
 }
 
-input[type="text"] + label[placeholder] {
-    display: block;
-    pointer-events: none;
-    line-height: 46px;
-    margin-top: -46px;
-}
-
-input[type="text"] + label[placeholder]:before {
-    content: attr(placeholder);
-    display: inline-block;
-    padding: 0;
-    color: #999999;
-    white-space: nowrap;
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-    -webkit-transform: translate(8px, -12px);
-    -ms-transform: translate(8px, -12px);
-    transform: translate(8px, -12px);
-    text-transform: uppercase;
-    font-size: 9px;
-    margin: 0 0 0 -2px;
-}
 
 
 /*
@@ -143,3 +144,20 @@ form ul.list-group {
     }
 }
 
+/*
+    Activities
+*/
+
+.activity-activity {
+    border-color: $secondary;
+    background-color: $light;
+}
+
+.activity-evaluation {
+    border-color: $secondary;
+    background-color: $info;
+
+    & .card-header{
+        color: $light;
+    }
+}
