--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -1,40 +1,42 @@
 {% macro activity_template(activity) %}
-    {% set color = '' %}
+    {% set class = '' %}
     {% if activity.vars.data %}
         {% if activity.vars.data.activity.type == constant("AppBundle\\Constant\\ActivityType::ACTIVITY") %}
-            {% if activity.vars.data.activity.mode == constant("AppBundle\\Constant\\ActivityMode::IN_CLASS") %}
-                {% set color = 'info' %}
+                {% set class = 'activity-activity' %}
             {% else %}
-                {% set color = 'warning' %}
-            {% endif %}
+                {% set class = 'activity-evaluation' %}
         {% endif %}
     {% endif %}
-    <div class="activity p-1 mt-1 border rounded shadow-sm border-{{ color }}">
-        <div class="row">
-            <div class="col">
-                <div class="row">
-                    <div class="col">
-                        <small class="font-weight-bold activity-label">
+    <div class="activity card mb-2 rounded shadow-sm {{ class }}">
+        <div class="card-header p-1">
+            <div class="row">
+                <div class="col-md-auto align-self-center">
+                    <i class="fas fa-caret-down" title="Déplier / Replier."
+                       data-toggle="collapse"
+                       data-target="#collapse_{{ activity.vars.id }}"
+                       aria-expanded="false"
+                       aria-controls="collapse_{{ activity.vars.id }}"
+                    ></i>
+                </div>
+                <div class="col">
+                    <small class="font-weight-bold activity-label">
                         {% if activity.vars.data %}
                             {{ activity.vars.data.activity.label }}
                         {% endif %}
-                        </small>
-                    </div>
+                    </small>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        {{ form_widget(activity.description) }}
-                        <label alt="Préciser si nécessaire" placeholder="Préciser si nécessaire"></label>
-                    </div>
+                <div class="col-md-auto">
+                    <i class="fas fa-arrows-alt-v activity-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
+                    <i class="fas fa-eraser activity-collection-remove" title="Retirer de la liste."></i>
                 </div>
-                {{ form_widget(activity.activity) }}
-            </div>
-            <div class="col col-md-auto align-self-center">
-                <i class="fas fa-arrows-alt-v activity-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
-                <i class="fas fa-eraser activity-collection-remove" title="Retirer de la liste."></i>
             </div>
         </div>
-        {{ form_widget(activity) }}
+        <div class="card-body p-1 bg-white border-0 rounded-bottom collapse multi-collapse" id="collapse_{{ activity.vars.id }}">
+            {{ form_widget(activity.description) }}
+            <label alt="Préciser si nécessaire" placeholder="Préciser si nécessaire"></label>
+            {{ form_widget(activity.activity) }}
+            {{ form_widget(activity) }}
+        </div>
     </div>
 {% endmacro %}
 
